--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,14 +20,11 @@ https://discord.gg/7xf3kPx
 <h1>Login!</h1>
 
 
-
-
-
 <div class="container">
     <div class="login">
         <div class="content">
             User Name: <input type="text" name="username " [(ngModel)]="username">
-            Password: <input type='text' name='password' [(ngModel)]="password">
+            Password: <input type='password' name='password' [(ngModel)]="password">
 
             <!-- what is this: {{username}} -->
             <button class="btn btn-success" (click)=handleLogin()>Login</button>
@@ -37,7 +34,4 @@ https://discord.gg/7xf3kPx
     <div class="container">
         <div class="alert alert-warning" *ngIf='invalidLogin'>{{errorMessage}}</div>
     </div>
-
-
-
 </div>
