--- a/src/app/list-todos/list-todos.component.html
+++ b/src/app/list-todos/list-todos.component.html
@@ -30,6 +30,12 @@
                 </tr>
             </tbody>
         </table>
+
+        <div class="row">
+            <td><button id="prueba" class="btn btn-success" (click)="addTodo(todo)">Add</button></td>
+
+        </div>
+
     </body>
 
 </div>
