--- a/src/app/list-todos/list-todos.component.html
+++ b/src/app/list-todos/list-todos.component.html
@@ -32,7 +32,7 @@
         </table>
 
         <div class="row">
-            <td><button id="prueba" class="btn btn-success" (click)="addTodo(todo)">Add</button></td>
+            <button (click)="addTodo()" class="btn btn-success">Add</button>
 
         </div>
 
