First Basic Auth

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -27,7 +27,9 @@ https://discord.gg/7xf3kPx
             Password: <input type='password' name='password' [(ngModel)]="password">
 
             <!-- what is this: {{username}} -->
-            <button class="btn btn-success" (click)=handleLogin()>Login</button>
+            <!-- <button class="btn btn-success" (click)=handleLogin()>Login</button> -->
+
+            <button class="btn btn-success" (click)=handleBasicAuthLogin()>Login</button>
 
         </div>
     </div>
